examples/expected/check_invalid_return_type.txt
error[E2006]: return type mismatch: expected I64, got Bool
  --> examples/invalid_return_type.tp:2:10
   |
 2 |   return true;
   |          ^^^^
